--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
     </style>
   </head>
   <body>
-    <h1 class="title">Hey, Firebaser 🔥🔥</h1>
+    <h1 class="title">Hey, Firebaser 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥</h1>
   </body>
 </html>
